# SeamAI

./: LICENSE  README.md
automower/failure_detection/: dataProcessing.py  hqCNN.py
automower/mower_node/: package.xml  setup.cfg  setup.py
automower/mower_node/mower_node/: data_saver.py  map_builder_idle.py  model.py  mower_node.py
automower/mower_node/mower_node/templates/: index.html
automower/open_day/pose_drive/: package.xml  setup.cfg  setup.py
automower/open_day/pose_drive/launch/: pose_drive.launch.py
automower/open_day/pose_drive/pose_drive/: pose_drive.py
automower/open_day/pose_estimator/: package.xml  setup.py
automower/open_day/pose_estimator/pose_estimator/: pose_estimator.py
automower/terrain_recognition/: dataProcessing.py  model.py
